# fish-shell

./: .gitattributes  .gitignore  CHANGELOG_orig  Doxyfile  Doxyfile.bak  Doxyfile.help  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure.ac  configure.scan
build_tools/: build_documentation.sh
fish.xcodeproj/: project.pbxproj
po/: ChangeLog  Makefile.in
xsel-1.2.0/: Makefile.am  Makefile.in  aclocal.m4  configure.ac  configure.scan
xsel-1.2.0/.deps/: xsel.Po
